[package]
name = "crates-sgx"
version = "0.1.0"
authors = ["MesaTEE Authors"]
edition = "2018"

[dependencies]
sgx_alloc                      = { git = "https://github.com/baidu/rust-sgx-sdk", rev = "v1.0.8" }
sgx_libc                       = { git = "https://github.com/baidu/rust-sgx-sdk", rev = "v1.0.8" }
sgx_rand                       = { git = "https://github.com/baidu/rust-sgx-sdk", rev = "v1.0.8" }
sgx_rand_derive                = { git = "https://github.com/baidu/rust-sgx-sdk", rev = "v1.0.8" }
sgx_serialize                  = { git = "https://github.com/baidu/rust-sgx-sdk", rev = "v1.0.8" }
sgx_serialize_derive           = { git = "https://github.com/baidu/rust-sgx-sdk", rev = "v1.0.8" }
sgx_serialize_derive_internals = { git = "https://github.com/baidu/rust-sgx-sdk", rev = "v1.0.8" }
sgx_tcrypto                    = { git = "https://github.com/baidu/rust-sgx-sdk", rev = "v1.0.8" }
sgx_tcrypto_helper             = { git = "https://github.com/baidu/rust-sgx-sdk", rev = "v1.0.8" }
sgx_tdh                        = { git = "https://github.com/baidu/rust-sgx-sdk", rev = "v1.0.8" }
sgx_tkey_exchange              = { git = "https://github.com/baidu/rust-sgx-sdk", rev = "v1.0.8" }
sgx_tprotected_fs              = { git = "https://github.com/baidu/rust-sgx-sdk", rev = "v1.0.8" }
sgx_trts                       = { git = "https://github.com/baidu/rust-sgx-sdk", rev = "v1.0.8" }
sgx_tse                        = { git = "https://github.com/baidu/rust-sgx-sdk", rev = "v1.0.8" }
sgx_tseal                      = { git = "https://github.com/baidu/rust-sgx-sdk", rev = "v1.0.8" }
sgx_tservice                   = { git = "https://github.com/baidu/rust-sgx-sdk", rev = "v1.0.8" }
sgx_tstd                       = { git = "https://github.com/baidu/rust-sgx-sdk", rev = "v1.0.8" }
sgx_tunittest                  = { git = "https://github.com/baidu/rust-sgx-sdk", rev = "v1.0.8" }
sgx_types                      = { git = "https://github.com/baidu/rust-sgx-sdk", rev = "v1.0.8" }
sgx_ucrypto                    = { git = "https://github.com/baidu/rust-sgx-sdk", rev = "v1.0.8" }
sgx_unwind                     = { git = "https://github.com/baidu/rust-sgx-sdk", rev = "v1.0.8" }
sgx_urts                       = { git = "https://github.com/baidu/rust-sgx-sdk", rev = "v1.0.8" }

http         = { git = "https://github.com/mesalock-linux/http-sgx" }
serde        = { git = "https://github.com/mesalock-linux/serde-sgx" }
serde_derive = { git = "https://github.com/mesalock-linux/serde-sgx" }
serde_json   = { git = "https://github.com/mesalock-linux/serde-json-sgx" }
log          = { git = "https://github.com/mesalock-linux/log-sgx" }

itertools    = { version = "0.8", default-features = false }
cfg-if       = "0.1"