[package]
name = "crates-sgx"
version = "0.1.0"
authors = ["MesaTEE Authors"]
edition = "2018"

[dependencies]
# Rust SGX SDK
sgx_alloc                      = { git = "https://github.com/baidu/rust-sgx-sdk", rev = "v1.0.8" }
sgx_libc                       = { git = "https://github.com/baidu/rust-sgx-sdk", rev = "v1.0.8" }
sgx_rand                       = { git = "https://github.com/baidu/rust-sgx-sdk", rev = "v1.0.8" }
sgx_rand_derive                = { git = "https://github.com/baidu/rust-sgx-sdk", rev = "v1.0.8" }
sgx_serialize                  = { git = "https://github.com/baidu/rust-sgx-sdk", rev = "v1.0.8" }
sgx_serialize_derive           = { git = "https://github.com/baidu/rust-sgx-sdk", rev = "v1.0.8" }
sgx_serialize_derive_internals = { git = "https://github.com/baidu/rust-sgx-sdk", rev = "v1.0.8" }
sgx_tcrypto                    = { git = "https://github.com/baidu/rust-sgx-sdk", rev = "v1.0.8" }
sgx_tcrypto_helper             = { git = "https://github.com/baidu/rust-sgx-sdk", rev = "v1.0.8" }
sgx_tdh                        = { git = "https://github.com/baidu/rust-sgx-sdk", rev = "v1.0.8" }
sgx_tkey_exchange              = { git = "https://github.com/baidu/rust-sgx-sdk", rev = "v1.0.8" }
sgx_tprotected_fs              = { git = "https://github.com/baidu/rust-sgx-sdk", rev = "v1.0.8" }
sgx_trts                       = { git = "https://github.com/baidu/rust-sgx-sdk", rev = "v1.0.8" }
sgx_tse                        = { git = "https://github.com/baidu/rust-sgx-sdk", rev = "v1.0.8" }
sgx_tseal                      = { git = "https://github.com/baidu/rust-sgx-sdk", rev = "v1.0.8" }
sgx_tservice                   = { git = "https://github.com/baidu/rust-sgx-sdk", rev = "v1.0.8" }
sgx_tstd                       = { git = "https://github.com/baidu/rust-sgx-sdk", rev = "v1.0.8" }
sgx_tunittest                  = { git = "https://github.com/baidu/rust-sgx-sdk", rev = "v1.0.8" }
sgx_types                      = { git = "https://github.com/baidu/rust-sgx-sdk", rev = "v1.0.8" }
sgx_unwind                     = { git = "https://github.com/baidu/rust-sgx-sdk", rev = "v1.0.8" }
sgx_urts                       = { git = "https://github.com/baidu/rust-sgx-sdk", rev = "v1.0.8" }

# SGX crates
aho-corasick = { git = "https://github.com/mesalock-linux/aho-corasick-sgx" }
base64       = { git = "https://github.com/mesalock-linux/rust-base64-sgx" }
bincode      = { git = "https://github.com/mesalock-linux/bincode-sgx" }
byteorder    = { git = "https://github.com/mesalock-linux/byteorder-sgx" }
bytes        = { git = "https://github.com/mesalock-linux/bytes-sgx" }
chrono       = { git = "https://github.com/mesalock-linux/chrono-sgx" }
env_logger   = { git = "https://github.com/mesalock-linux/env_logger-sgx" }
getrandom    = { git = "https://github.com/mesalock-linux/getrandom-sgx" }
heapsize     = { git = "https://github.com/mesalock-linux/heapsize-sgx" }
hex          = { git = "https://github.com/mesalock-linux/rust-hex-sgx" }
http         = { git = "https://github.com/mesalock-linux/http-sgx" }
iovec        = { git = "https://github.com/mesalock-linux/iovec-sgx" }
itoa         = { git = "https://github.com/mesalock-linux/itoa-sgx" }
log          = { git = "https://github.com/mesalock-linux/log-sgx" }
md5          = { git = "https://github.com/mesalock-linux/md5-sgx" }
num-bigint   = { git = "https://github.com/mesalock-linux/num-bigint-sgx" }
num-traits   = { git = "https://github.com/mesalock-linux/num-traits-sgx" }
parity-wasm  = { git = "https://github.com/mesalock-linux/parity-wasm-sgx", branch = "v0.31.3" }
quick-error  = { git = "https://github.com/mesalock-linux/quick-error-sgx" }
rand         = { git = "https://github.com/mesalock-linux/rand-sgx", rev = "v0.6.5_sgx1.0.8" }
regex        = { git = "https://github.com/mesalock-linux/regex-sgx" }
ring         = { git = "https://github.com/mesalock-linux/ring-sgx" }
rustls       = { git = "https://github.com/mesalock-linux/rustls", branch = "mesalock_sgx" }
sct          = { git = "https://github.com/mesalock-linux/sct.rs", branch = "mesalock_sgx" }
serde        = { git = "https://github.com/mesalock-linux/serde-sgx" }
serde_cbor   = { git = "https://github.com/mesalock-linux/cbor-sgx" }
serde_derive = { git = "https://github.com/mesalock-linux/serde-sgx" }
serde_json   = { git = "https://github.com/mesalock-linux/serde-json-sgx" }
sha-1        = { git = "https://github.com/mesalock-linux/hashes-sgx-fake" }
sha1         = { git = "https://github.com/mesalock-linux/rust-sha1-sgx" }
sha2         = { git = "https://github.com/mesalock-linux/hashes-sgx-fake" }
untrusted    = { git = "https://github.com/briansmith/untrusted", tag = "ring-master" }
uuid         = { git = "https://github.com/mesalock-linux/uuid-sgx" }
wabt         = { git = "https://github.com/mesalock-linux/wabt-rs-sgx", branch = "v0.6.0-core" }
wasmi        = { git = "https://github.com/mesalock-linux/wasmi-sgx" }
webpki       = { git = "https://github.com/mesalock-linux/webpki", branch = "mesalock_sgx" }
webpki-roots = { git = "https://github.com/mesalock-linux/webpki-roots", branch = "mesalock_sgx" }
yasna        = { git = "https://github.com/mesalock-linux/yasna.rs-sgx" }

# no_std crates
bit-vec = { version = "0.6.1", default-feature = false }
cfg-if       = "0.1.9"
httparse     = { version = "1.3.2", default-features=false }
itertools    = { version = "0.8.0", default-features = false }
lazy_static  = { version = "1.0.2", features = ["spin_no_std"] }