[package]
name = "crates-sgx"
version = "0.1.0"
authors = ["MesaTEE Authors"]
edition = "2018"

[dependencies]
# SGX helper
profiler_builtins              = { git = "https://github.com/mesalock-linux/sgx-fake-profiler-builtins" }

# Rust SGX SDK
sgx_alloc                      = { git = "https://github.com/baidu/rust-sgx-sdk", rev = "v1.0.9" }
sgx_build_helper               = { git = "https://github.com/baidu/rust-sgx-sdk", rev = "v1.0.9" }
sgx_cov                        = { git = "https://github.com/baidu/rust-sgx-sdk", rev = "v1.0.9" }
sgx_libc                       = { git = "https://github.com/baidu/rust-sgx-sdk", rev = "v1.0.9" }
sgx_rand                       = { git = "https://github.com/baidu/rust-sgx-sdk", rev = "v1.0.9" }
sgx_rand_derive                = { git = "https://github.com/baidu/rust-sgx-sdk", rev = "v1.0.9" }
sgx_serialize                  = { git = "https://github.com/baidu/rust-sgx-sdk", rev = "v1.0.9" }
sgx_serialize_derive           = { git = "https://github.com/baidu/rust-sgx-sdk", rev = "v1.0.9" }
sgx_serialize_derive_internals = { git = "https://github.com/baidu/rust-sgx-sdk", rev = "v1.0.9" }
sgx_tcrypto                    = { git = "https://github.com/baidu/rust-sgx-sdk", rev = "v1.0.9" }
sgx_tcrypto_helper             = { git = "https://github.com/baidu/rust-sgx-sdk", rev = "v1.0.9" }
sgx_tdh                        = { git = "https://github.com/baidu/rust-sgx-sdk", rev = "v1.0.9" }
sgx_tkey_exchange              = { git = "https://github.com/baidu/rust-sgx-sdk", rev = "v1.0.9" }
sgx_tprotected_fs              = { git = "https://github.com/baidu/rust-sgx-sdk", rev = "v1.0.9" }
sgx_trts                       = { git = "https://github.com/baidu/rust-sgx-sdk", rev = "v1.0.9" }
sgx_tse                        = { git = "https://github.com/baidu/rust-sgx-sdk", rev = "v1.0.9" }
sgx_tseal                      = { git = "https://github.com/baidu/rust-sgx-sdk", rev = "v1.0.9" }
sgx_tservice                   = { git = "https://github.com/baidu/rust-sgx-sdk", rev = "v1.0.9" }
sgx_tstd                       = { git = "https://github.com/baidu/rust-sgx-sdk", rev = "v1.0.9" }
sgx_tunittest                  = { git = "https://github.com/baidu/rust-sgx-sdk", rev = "v1.0.9" }
sgx_types                      = { git = "https://github.com/baidu/rust-sgx-sdk", rev = "v1.0.9" }
sgx_unwind                     = { git = "https://github.com/baidu/rust-sgx-sdk", rev = "v1.0.9" }
sgx_urts                       = { git = "https://github.com/baidu/rust-sgx-sdk", rev = "v1.0.9" }

# SGX crates
adler32      = { git = "https://github.com/mesalock-linux/adler32-rs-sgx" }
aho-corasick = { git = "https://github.com/mesalock-linux/aho-corasick-sgx" }
array_tool   = { git = "https://github.com/mesalock-linux/array_tool-sgx" }
base64       = { git = "https://github.com/mesalock-linux/rust-base64-sgx" }
bincode      = { git = "https://github.com/mesalock-linux/bincode-sgx" }
byteorder    = { git = "https://github.com/mesalock-linux/byteorder-sgx" }
bytes        = { git = "https://github.com/mesalock-linux/bytes-sgx" }
chrono       = { git = "https://github.com/mesalock-linux/chrono-sgx" }
crc32fast    = { git = "https://github.com/mesalock-linux/rust-crc32fast-sgx" }
color_quant  = { git = "https://github.com/mesalock-linux/color_quant-sgx" }
deflate      = { git = "https://github.com/mesalock-linux/deflate-rs-sgx", branch = "dev" }
env_logger   = { git = "https://github.com/mesalock-linux/env_logger-sgx" }
getrandom    = { git = "https://github.com/mesalock-linux/getrandom-sgx" }
gif          = { git = "https://github.com/mesalock-linux/image-gif-sgx" }
gzip-header  = { git = "https://github.com/mesalock-linux/gzip-header-sgx" }
heapsize     = { git = "https://github.com/mesalock-linux/heapsize-sgx" }
hex          = { git = "https://github.com/mesalock-linux/rust-hex-sgx" }
http         = { git = "https://github.com/mesalock-linux/http-sgx" }
iovec        = { git = "https://github.com/mesalock-linux/iovec-sgx" }
image        = { git = "https://github.com/mesalock-linux/image-sgx" }
inflate      = { git = "https://github.com/mesalock-linux/inflate-sgx" }
itoa         = { git = "https://github.com/mesalock-linux/itoa-sgx" }
jpeg-decoder = { git = "https://github.com/mesalock-linux/jpeg-decoder-sgx" }
linked-hash-map = { git = "https://github.com/mesalock-linux/linked-hash-map-sgx" }
log          = { git = "https://github.com/mesalock-linux/log-sgx" }
lzw          = { git = "https://github.com/mesalock-linux/lzw-sgx" }
matrixmultiply = { git = "https://github.com/mesalock-linux/matrixmultiply-sgx" }
md5          = { git = "https://github.com/mesalock-linux/md5-sgx" }
net2         = { git = "https://github.com/mesalock-linux/net2-rs" }
num-bigint   = { git = "https://github.com/mesalock-linux/num-bigint-sgx" }
num-traits   = { git = "https://github.com/mesalock-linux/num-traits-sgx" }
parity-wasm  = { git = "https://github.com/mesalock-linux/parity-wasm-sgx", branch = "v0.31.3" }
png          = { git = "https://github.com/mesalock-linux/image-png-sgx" }
quick-error  = { git = "https://github.com/mesalock-linux/quick-error-sgx" }
rand         = { git = "https://github.com/mesalock-linux/rand-sgx", tag = "v0.6.5_sgx1.0.9" }
regex        = { git = "https://github.com/mesalock-linux/regex-sgx" }
ring         = { git = "https://github.com/mesalock-linux/ring-sgx", tag = "v0.16.5" }
rulinalg     = { git = "https://github.com/mesalock-linux/rulinalg-sgx" }
rustls       = { git = "https://github.com/mesalock-linux/rustls", branch = "mesalock_sgx" }
rusty-machine = {git = "https://github.com/mesalock-linux/rusty-machine-sgx" }
sct          = { git = "https://github.com/mesalock-linux/sct.rs", branch = "mesalock_sgx" }
serde        = { git = "https://github.com/mesalock-linux/serde-sgx" }
serde_cbor   = { git = "https://github.com/mesalock-linux/cbor-sgx" }
serde_derive = { git = "https://github.com/mesalock-linux/serde-sgx" }
serde_json   = { git = "https://github.com/mesalock-linux/serde-json-sgx" }
sha-1        = { git = "https://github.com/mesalock-linux/hashes-sgx-fake" }
sha1         = { git = "https://github.com/mesalock-linux/rust-sha1-sgx" }
sha2         = { git = "https://github.com/mesalock-linux/hashes-sgx-fake" }
tiff         = { git = "https://github.com/mesalock-linux/image-tiff-sgx" }
toml         = { git = "https://github.com/mesalock-linux/toml-rs-sgx" }
uuid         = { git = "https://github.com/mesalock-linux/uuid-sgx" }
wabt         = { git = "https://github.com/mesalock-linux/wabt-rs-sgx", branch = "v0.6.0-core" }
wasmi        = { git = "https://github.com/mesalock-linux/wasmi-sgx" }
webpki       = { git = "https://github.com/mesalock-linux/webpki", branch = "mesalock_sgx" }
webpki-roots = { git = "https://github.com/mesalock-linux/webpki-roots", branch = "mesalock_sgx" }
yasna        = { git = "https://github.com/mesalock-linux/yasna.rs-sgx" }

# no_std crates
assert_matches = { version = "1.3.0" }
bit-vec = { version = "0.6.1", default-feature = false }
cfg-if       = "0.1.9"
httparse     = { version = "1.3.4", default-features=false }
itertools    = { version = "0.8.0", default-features = false }
lazy_static  = { version = "1.4.0", features = ["spin_no_std"] }
untrusted    = { version = "0.7.0" }
